refactor(http-admin): governance rule exemptions
